smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/elision/structure-member-elision-in-v1.smithy
// Members can only elide targets in IDL version 2 or later
$version: "1.0"
namespace smithy.example

structure Foo {
    $bar
}
